--- a/Precificador.Core/Precificador.Core.csproj
+++ b/Precificador.Core/Precificador.Core.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Business\" />
+    <Compile Remove="Business\**" />
+    <EmbeddedResource Remove="Business\**" />
+    <None Remove="Business\**" />
   </ItemGroup>
 
 </Project>
