--- a/Precificador.Core/Precificador.Core.csproj
+++ b/Precificador.Core/Precificador.Core.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Domain\Produto.cs" />
     <Compile Include="Domain\TipoInsumo.cs" />
     <Compile Include="Domain\UnidadeMedida.cs" />
+    <Compile Include="Entities\BaseEntity.cs" />
     <Compile Include="Entities\ColecaoDto.cs" />
     <Compile Include="Entities\InsumoDto.cs" />
     <Compile Include="Entities\InsumoProdutoDto.cs" />
@@ -65,9 +66,11 @@
     <Compile Include="Entities\ProdutoDto.cs" />
     <Compile Include="Entities\TipoInsumoDto.cs" />
     <Compile Include="Entities\UnidadeMedidaDto.cs" />
+    <Compile Include="Interfaces\IBaseRepository.cs" />
+    <Compile Include="Interfaces\IProdutoRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\ProdutoRepository.cs" />
-    <Compile Include="Repositories\RepositoryBase.cs" />
+    <Compile Include="Repositories\BaseRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
