--- a/src/Precificador.WebApi/Precificador.WebApi.csproj
+++ b/src/Precificador.WebApi/Precificador.WebApi.csproj
@@ -7,11 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.11" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.7" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.4" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <ProjectReference Include="..\Precificador.Application\Precificador.Application.csproj" />
   </ItemGroup>
 
 </Project>
