--- a/src/Precificador.WebApi/Precificador.WebApi.csproj
+++ b/src/Precificador.WebApi/Precificador.WebApi.csproj
@@ -9,11 +9,14 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.11" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.7" />
+    <PackageReference Include="Serilog" Version="4.3.0" />
+    <PackageReference Include="Serilog.Sinks.File" Version="7.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="8.1.4" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Precificador.Application\Precificador.Application.csproj" />
+    <ProjectReference Include="..\Precificador.Infrastructure\Precificador.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
