Testes da Coleção, Migração inicial, Ajustes no swagger e vitoria <3

--- a/src/Precificador.WebApi/appsettings.json
+++ b/src/Precificador.WebApi/appsettings.json
@@ -1,7 +1,12 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost;Database=FCGDb;Trusted_Connection=True;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
+      "Microsoft": "Warning",
+      "Microsoft.Hosting.Lifetime": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
   },
