--- a/src/Precificador.WebApi/appsettings.json
+++ b/src/Precificador.WebApi/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=localhost;Database=Precificador;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=dell-Legacy-val;Database=Precificador;Trusted_Connection=True;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
